--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,12 @@ body {
     font-size: 24px;
 }
 
+button {
+    width: 80px;
+    height: 45px;
+    font-size: 20px;
+}
+
 .active {
     color: red;
 }
